Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Jquery-panelslider</h1>
-          <h2>Side panel slider plugin (jQuery) that also slides page (inspired on medium)</h2>
+          <h2>Side panel slider plugin (jQuery) that also slides page. Branch by https://github.com/eduardomb/jquery-panelslider</h2>
         </header>
 
         <section id="downloads" class="clearfix">
