--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+      <style type="text/css">
+          body {
+              font-family: Arial;
+              background: #eee;
+              margin: 0;
+              padding: 0px;
+          }
+          h1, h2 { margin-top: 0; }
+          p { color: #ccc; line-height: 1.5; }
+
+          #container{
+              overflow: auto;
+              background: white;
+          }
+
+          .panel {
+              display: none;
+              width: auto;
+              height: auto;
+              overflow: auto;
+              background-color: #333;
+              color: #fff;
+          }
+      </style>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,7 +43,7 @@
 
         <header>
           <h1>Jquery-panelslider</h1>
-          <h2>Side panel slider plugin (jQuery) that also slides page. Branch by https://github.com/eduardomb/jquery-panelslider</h2>
+          <h2>Side panel slider plugin (jQuery) that also slides page. <br/>forked from https://github.com/eduardomb/jquery-panelslider</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -34,35 +58,10 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Panel Demo</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-        </section>
+            <a class="left-panel-link" href="#left-panel">Open left panel</a> |
+            <a class="right-panel-link" href="#right-panel">Open right panel</a>
 
         <footer>
           Jquery-panelslider is maintained by <a href="https://github.com/gyuha">gyuha</a><br>
@@ -72,5 +71,35 @@ $ git checkout gh-pages
         
       </div>
     </div>
+    <!-- Left panel -->
+    <div id="left-panel" class="panel">
+        <h1>Left panel</h1>
+        <p>Click anywhere outside panel to close it.</p>
+        <button class="close-panel-bt">Close</button>
+        <div style="height: 2000px;"></div>
+        <button class="close-panel-bt">Close</button>
+    </div>
+
+    <!-- Right panel -->
+    <div id="right-panel" class="panel">
+        <h1>Right panel</h1>
+        <p>Clicking outside this panel wont close it because <code>clickClose = false</code></p>
+        <button class="close-panel-bt">Close</button>
+        <div style="height: 2000px;"></div>
+        <button class="close-panel-bt">Close</button>
+    </div>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://raw.githubusercontent.com/gyuha/jquery-panelslider/master/jquery.panelslider.min.js"></script>
+    <script>
+        $(function(){
+            $('.left-panel-link').panelslider();
+            $('.right-panel-link').panelslider({side: 'right', duration: 200, fullWidth: true });
+
+            $('.close-panel-bt').click(function() {
+                $.panelslider.close();
+            });
+        })
+    </script>
   </body>
 </html>
