--- a/example.html
+++ b/example.html
@@ -34,6 +34,7 @@
     <h1>Panel slider example</h1>
     <a class="left-panel-link" href="#left-panel">Open left panel</a> |
     <a class="right-panel-link" href="#right-panel">Open right panel</a>
+    <button onclick="$.panelslider($('#right-panel'),{side: 'right', duration: 200, fullWidth: true })" value="Open right panel">Open right panel</button>
     <hr />
     <p>Usage instructions and source code <a href="https://github.com/gyuha/jquery-panelslider">here</a></p>
     <div style="height: 2000px;"></div>
